<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lectio Divina - On Jest</string>
    <string name="app_sub_name">Modlitwa ze Słowem Bożym</string>
    <string name="title_activity_readings">Lectio Divina - On Jest</string>
    <string name="action_about_lectio">Lectio Divina</string>
    <string name="action_about_us">O autorach</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_refresh">Odśwież</string>
    <string name="action_clear">Usuń rozważania</string>
    <string name="action_exit">Zakończ</string>
    <string name="action_zooming">Zoom</string>
    <string name="action_zoomin">Powiększanie</string>
    <string name="action_zoomout">Pomniejszanie</string>
    <string name="action_theme_to_night">Zmniejsz jaskrawość</string>
    <string name="action_theme_to_day">Zwiększ jaskrawość</string>
    <string name="text_are_you_sure_to_delete">Usunąć wszystkie rozważania?</string>
    <string name="text_yes">Tak</string>
    <string name="text_no">Nie</string>
    <string name="text_no_readings">Brak rozważań</string>
    <string name="html_empty_reading_content"><![CDATA[<html><p>Brak rozważań</p>Użyj opcji Odśwież z menu aby pobrać najnowsze rozważania</html>]]></string>
    <string name="text_refreshing_started">Rozpoczęto pobieranie rozważań</string>
    <string name="text_refreshing_in_progress">Trwa pobieranie rozważań</string>
    <string name="text_refreshing_ended">Pobrano %d nowych rozważań</string>
    <string name="title_activity_about_lectio">Lectio Divina</string>
    <string name="button_close">Zamknij</string>
    <string name="title_activity_about_us">O autorach</string>
    <string name="versionTextFormat">Wersja: %1$s (%2$d)</string>
    <string name="tab_LectioDivina">Lectio Divina</string>
    <string name="tab_ShortContemplation">Rozważania krótkie</string>
    <string name="title_activity_settings_activity_new">SettingsNew</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
