<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tr.onjestslowo.app.ReadingsActivity" >
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_autorenew_white"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_about_lectio"
        android:title="@string/action_about_lectio"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item android:id="@+id/action_about_us"
        android:title="@string/action_about_us"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="400"
        app:showAsAction="never" />
    <item android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:orderInCategory="500"
        app:showAsAction="never" />
    <item android:id="@+id/action_zoom_to_hidden"
        android:title="@string/action_zooming"
        android:icon="@drawable/ic_format_size_white"
        android:visible="true"
        android:orderInCategory="600"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_zoom_to_visible"
        android:title="@string/action_zooming"
        android:icon="@drawable/ic_format_size_dis_white"
        android:visible="false"
        android:orderInCategory="600"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_theme_to_night"
        android:title="@string/action_theme_to_night"
        android:icon="@drawable/ic_brightness_5_white"
        android:visible="true"
        android:orderInCategory="700"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_theme_to_day"
        android:title="@string/action_theme_to_day"
        android:icon="@drawable/ic_brightness_4_white"
        android:visible="false"
        android:orderInCategory="700"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="800"
        app:showAsAction="never" />
</menu>
